# atividades-CG-1

./: .gitignore  CMakeLists.txt  README.md  color.cpp  executavel.sh  main  main.cpp
include/: Algebra.hpp  CMakeLists.txt  Camera.hpp  Color.hpp  Lights.hpp  Objects.hpp  Ray.hpp  Reader.hpp  Scene.hpp  Vector3d.hpp
src/: Algebra.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  Objects.cpp  Ray.cpp  Reader.cpp  Scene.cpp  Vector3d.cpp  main.cpp
